[gd_scene load_steps=2 format=3 uid="uid://db3cw6m00sqau"]

[ext_resource type="Script" path="res://GameOverScreen.gd" id="1_gameover"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_gameover")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.05, 0.9)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 150.0
offset_right = 150.0
offset_bottom = 200.0
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="FloorLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "Floor Reached: 1"
horizontal_alignment = 1

[node name="CardsCollectedLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "Cards Collected: 0"
horizontal_alignment = 1

[node name="RelicsFoundLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "Relics Found: 0"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -50.0

[node name="RetryButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Retry"

[node name="MainMenuButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu" 